# appposto

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  backup.txt  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: auth.py  densidade.py  import_densidade_combustivel.py  municipio.py  user.py
app/core/: database.py  security.py
app/models/: __init__.py  base.py  classe_acesso.py  densidade_diesel.py  densidade_etanol.py  densidade_gasolina.py  densidades.py  empresa.py  endereco.py  municipio.py  usuario.py  usuario_empresa.py
app/tests/: test_metadata.py
migrations/: env.py
migrations/versions/: 0e3f6c90425a_alter_column_type_for_densidade_.py  ae41d7ea282a_cria_tabelas_municipio_e_endereco.py
